# pilot-virutal-cell-nmr-pipeline-

./: README.md
nmr_physics_pipeline/: README.md  __init__.py  pyproject.toml
nmr_physics_pipeline/configs/: stage1_cnn.yaml  stage2_set_transformer.yaml  stage3_assignment.yaml  stage4_noesy_structure.yaml  stage5_physics.yaml
nmr_physics_pipeline/data/: __init__.py  augmentation.py  bmrb_client.py  nmr_datasets.py  preprocessing.py  synthetic_spectra.py
nmr_physics_pipeline/models/: __init__.py  common.py  stage1_cnn.py  stage2_set_transformer.py  stage3_assignment.py  stage4_noesy_structure.py  stage5_physics.py
nmr_physics_pipeline/models/components/: __init__.py  set_attention.py
nmr_physics_pipeline/models/physics_heads/: __init__.py
nmr_physics_pipeline/nmr_physics_pipeline/: __init__.py
nmr_physics_pipeline/nmr_physics_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nmr_physics_pipeline/tests/: test_smoke.py
